--- a/templates/blog/form.html.twig
+++ b/templates/blog/form.html.twig
@@ -39,7 +39,7 @@
 <button type="submit" class="btn btn-primary"> 
 {% if editMode %}
 
-    Enreistrer les modifications
+    Enregistrer les modifications
 
 {% else %}
     
