demoblog => Création du User et du login

--- a/templates/blog/form.html.twig
+++ b/templates/blog/form.html.twig
@@ -36,6 +36,8 @@
 }) }}
 {{ form_row(formArticle.image) }}
 
+{{ form_row(formArticle.category) }}
+
 <button type="submit" class="btn btn-primary"> 
 {% if editMode %}
 
