--- a/templates/blog/home.html.twig
+++ b/templates/blog/home.html.twig
@@ -10,6 +10,8 @@ Accueil
 
     <p> coucou les gens </p>
 
+    <p> Bienvenue sur notre site de Blog pour apprendre Symfony avec un Crud </p>
+
     <h3> {{slogan}} </h3>
 
     {% if age >= 18 %}
