--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,17 +19,31 @@
             <div class="container-fluid">
                 <a class="navbar-brand" href="{{ path('home') }}">Demo Blog</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{{ path('app_blog') }}">Liste des articles</a>
-                    </li>
-                    <li class="nav-item">
-                    <a class="nav-link" href="{{ path('blog_create') }}">Création des articles</a>
-                    </li>
-                </ul>
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="{{ path('app_blog') }}">Liste des articles</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('blog_create') }}">Création des articles</a>
+                        </li>
+                        <li>
+                            {% if app.user %} {# Si l'utilisateur est connectés #}
+                            <a href="{{ path('app_logout') }}" class="nav-link"> Déconnexion </a>
+                            {% else %}
+                        </li>
+                        <li>
+                            <a href="{{ path('app_login') }}" class="nav-link"> Connexion </a>
+                        </li>
+                        <li>
+                            <a href="{{ path('app_register') }}" class="nav-link"> Création de compte </a>
+                        </li>
+                            {% endif %}
+                        
+                        
+                    </ul>
                 </div>
             </div>
         </nav>
